trunk/3rdParty/Htmlayout/api/htmlayout_dom.h


typedef int HLDOM_RESULT;
typedef LPVOID HELEMENT;
EXTERN_C HLDOM_RESULT HLAPI HTMLayoutShowPopup(HELEMENT hePopup, HELEMENT heAnchor, UINT placement);
EXTERN_C HLDOM_RESULT HLAPI HTMLayoutShowPopupAt(HELEMENT hePopup, POINT pos, BOOL animate);
EXTERN_C HLDOM_RESULT HLAPI HTMLayoutHidePopup(HELEMENT he);
typedef BOOL CALLBACK ElementEventProc(LPVOID tag, HELEMENT he, UINT evtg, LPVOID prms );
typedef ElementEventProc* LPELEMENT_EVENT_PROC;
enum ELEMENT_STATE_BITS 
{
    STATE_LINK        = 0x00000001,  
    STATE_HOVER       = 0x00000002,  
    STATE_ACTIVE      = 0x00000004,  
    STATE_FOCUS       = 0x00000008,  
    STATE_VISITED     = 0x00000010,  
    STATE_CURRENT     = 0x00000020,  
    STATE_CHECKED     = 0x00000040,  
    STATE_DISABLED    = 0x00000080,  
    STATE_READONLY    = 0x00000100,  
    STATE_EXPANDED    = 0x00000200,  
    STATE_COLLAPSED   = 0x00000400,  
    STATE_INCOMPLETE  = 0x00000800,  
    STATE_ANIMATING   = 0x00001000,  
    STATE_FOCUSABLE   = 0x00002000,  
    STATE_ANCHOR      = 0x00004000,  
    STATE_SYNTHETIC   = 0x00008000,  
    STATE_OWNS_POPUP  = 0x00010000,  
    STATE_TABFOCUS    = 0x00020000,  
    STATE_EMPTY       = 0x00040000,  
    STATE_BUSY        = 0x00080000,  
    STATE_DRAG_OVER   = 0x00100000,  
    STATE_DROP_TARGET = 0x00200000,  
    STATE_MOVING      = 0x00400000,  
    STATE_COPYING     = 0x00800000,  
    STATE_DRAG_SOURCE = 0x00C00000,  
    STATE_POPUP       = 0x40000000,  
    STATE_PRESSED     = 0x04000000,  
    STATE_HAS_CHILDREN= 0x02000000,  
    STATE_HAS_CHILD   = 0x01000000,  
    STATE_IS_LTR      = 0x20000000,  
    STATE_IS_RTL      = 0x10000000,  
};
EXTERN_C HLDOM_RESULT HLAPI HTMLayoutGetElementState( HELEMENT he, UINT* pstateBits);
EXTERN_C HLDOM_RESULT HLAPI HTMLayoutSetElementState( HELEMENT he, UINT stateBitsToSet, UINT stateBitsToClear, BOOL updateView);
EXTERN_C HLDOM_RESULT HLAPI HTMLayoutCreateElement( LPCSTR tagname, LPCWSTR textOrNull,  HELEMENT *phe );
EXTERN_C HLDOM_RESULT HLAPI HTMLayoutCloneElement( HELEMENT he,  HELEMENT *phe );
EXTERN_C HLDOM_RESULT HLAPI HTMLayoutInsertElement( HELEMENT he, HELEMENT hparent, UINT index );
EXTERN_C HLDOM_RESULT HLAPI HTMLayoutDetachElement( HELEMENT he );
EXTERN_C HLDOM_RESULT HLAPI HTMLayoutSetTimer( HELEMENT he, UINT milliseconds );
EXTERN_C HLDOM_RESULT HLAPI HTMLayoutAttachEventHandler( HELEMENT he, LPELEMENT_EVENT_PROC pep, LPVOID tag );
EXTERN_C HLDOM_RESULT HLAPI HTMLayoutDetachEventHandler( HELEMENT he, LPELEMENT_EVENT_PROC pep, LPVOID tag );
EXTERN_C HLDOM_RESULT HLAPI HTMLayoutWindowAttachEventHandler( HWND hwndLayout, LPELEMENT_EVENT_PROC pep, LPVOID tag, UINT subscription );
EXTERN_C HLDOM_RESULT HLAPI HTMLayoutWindowDetachEventHandler( HWND hwndLayout, LPELEMENT_EVENT_PROC pep, LPVOID tag );
EXTERN_C HLDOM_RESULT HLAPI HTMLayoutSendEvent(
          HELEMENT he, UINT appEventCode, HELEMENT heSource, UINT_PTR reason,  BOOL* handled);
EXTERN_C HLDOM_RESULT HLAPI HTMLayoutPostEvent(
          HELEMENT he, UINT appEventCode, HELEMENT heSource, UINT reason);
struct METHOD_PARAMS;
EXTERN_C HLDOM_RESULT HLAPI HTMLayoutCallBehaviorMethod(
          HELEMENT he, METHOD_PARAMS* params);
EXTERN_C HLDOM_RESULT HLAPI HTMLayoutRequestElementData(
          HELEMENT he, LPCWSTR url, UINT dataType, HELEMENT initiator );
enum REQUEST_TYPE
{
  GET_ASYNC,  
  POST_ASYNC, 
};
struct REQUEST_PARAM { LPCWSTR name; LPCWSTR value; };
EXTERN_C HLDOM_RESULT HLAPI HTMLayoutHttpRequest( 
          HELEMENT        he,           
          LPCWSTR         url,          
          UINT            dataType,     
          UINT            requestType,  
          REQUEST_PARAM*  requestParams,
          UINT            nParams       
          );
EXTERN_C HLDOM_RESULT HLAPI HTMLayoutGetScrollInfo( 
         HELEMENT he, LPPOINT scrollPos, LPRECT viewRect, LPSIZE contentSize );
EXTERN_C HLDOM_RESULT HLAPI HTMLayoutSetScrollPos( 
         HELEMENT he, POINT scrollPos, BOOL smooth );
EXTERN_C HLDOM_RESULT HLAPI HTMLayoutIsElementVisible( HELEMENT he, BOOL* pVisible);
EXTERN_C HLDOM_RESULT HLAPI HTMLayoutIsElementEnabled( HELEMENT he, BOOL* pEnabled );
typedef INT CALLBACK ELEMENT_COMPARATOR( HELEMENT he1, HELEMENT he2, LPVOID param );
EXTERN_C HLDOM_RESULT HLAPI HTMLayoutSortElements( 
         HELEMENT he, UINT firstIndex, UINT lastIndex, 
         ELEMENT_COMPARATOR* cmpFunc, LPVOID cmpFuncParam );
EXTERN_C HLDOM_RESULT HLAPI HTMLayoutTraverseUIEvent( 
         UINT evt, LPVOID eventCtlStruct, LPBOOL bOutProcessed );
EXTERN_C HLDOM_RESULT HLAPI HTMLayoutMoveElement( HELEMENT he, INT xView, INT yView);