desktop/Expemerent.UI/Native/HtmlayoutDomApi.cs


        /// <summary>
        /// Shows block element (DIV) in popup window.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutShowPopup")]
        private static extern ScDomResult SciterShowPopup(IntPtr hePopup, IntPtr heAnchor, POPUP_PLACEMENT placement);

        /// <summary>
        /// Shows block element (DIV) in popup window at given position.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutShowPopupAt")]
        private static extern ScDomResult SciterShowPopupAt(IntPtr hePopup, Point pos, bool animate);

        /// <summary>
        /// Removes popup window.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutHidePopup")]
        private static extern ScDomResult SciterHidePopup(IntPtr he);

        /// <summary>
        /// Get/set state bits, stateBits*** accept or'ed values above
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutGetElementState")]
        private static extern ScDomResult SciterGetElementState(IntPtr he, out ELEMENT_STATE_BITS pstateBits);

        /// <summary>
        /// Get/set state bits, stateBits*** accept or'ed values above
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutSetElementState")]
        private static extern ScDomResult SciterSetElementState(IntPtr he, ELEMENT_STATE_BITS stateBitsToSet, ELEMENT_STATE_BITS stateBitsToClear, bool updateView);

        /// <summary>
        /// Create new element, the element is disconnected initially from the DOM. 
        /// Element created with ref_count = 1 thus you must call Sciter_UnuseElement on returned handler.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutCreateElement")]
        private static extern ScDomResult SciterCreateElement(/*[MarshalAs(UnmanagedType.LPStr)]*/ Byte[] tagname, [MarshalAs(UnmanagedType.LPWStr)] String textOrNull, out IntPtr phe);

        /// <summary>
        /// Create new element as copy of existing element, new element is a full (deep) copy of the element and
        /// is disconnected initially from the DOM.
        /// Element created with ref_count = 1 thus you \b must call Sciter_UnuseElement on returned handler.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutCloneElement")]
        private static extern ScDomResult SciterCloneElement(IntPtr he, out IntPtr phe);

        /// <summary>
        /// Insert element at index position of parent.
        /// It is not an error to insert element which already has parent - it will be disconnected first, but 
        /// you need to update elements parent in this case. 
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutInsertElement")]
        private static extern ScDomResult SciterInsertElement(IntPtr he, IntPtr hparent, int index);

        /// <summary>
        /// Take element out of its container (and DOM tree). 
        /// Element will be destroyed when its reference counter will become zero
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutDetachElement")]
        private static extern ScDomResult SciterDetachElement(IntPtr he);

        /// <summary>
        /// Start Timer for the element. 
        /// Element will receive on_timer event
        /// To stop timer call SciterSetTimer( element, 0 );
        /// TODO: Extended timer available
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutSetTimer")]
        private static extern ScDomResult SciterSetTimer(IntPtr he, int milliseconds);

        /// <summary>
        /// Attach/Detach ElementEventProc to the element 
        /// See htmlayout::event_handler.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutDetachEventHandler")]
        private static extern ScDomResult SciterDetachEventHandler(IntPtr he, IntPtr pep, IntPtr tag);

        /// <summary>
        /// Attach ElementEventProc to the element and subscribe it to events providede by subscription parameter
        /// See Sciter::attach_event_handler.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutAttachEventHandler")]
        private static extern ScDomResult SciterAttachEventHandler(IntPtr he, IntPtr pep, IntPtr tag);

        /// <summary>
        /// Attach/Detach ElementEventProc to the Sciter window. 
        /// All events will start first here (in SINKING phase) and if not consumed will end up here.
        /// You can install Window EventHandler only once - it will survive all document reloads.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutWindowAttachEventHandler")]
        private static extern ScDomResult SciterWindowAttachEventHandler(IntPtr IntPtrLayout, /*[MarshalAs(UnmanagedType.FunctionPtr)] ElementEventProc*/ IntPtr pep, IntPtr tag, EVENT_GROUPS subscription);

        /// <summary>
        /// Attach/Detach ElementEventProc to the Sciter window. 
        /// All events will start first here (in SINKING phase) and if not consumed will end up here.
        /// You can install Window EventHandler only once - it will survive all document reloads.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutWindowDetachEventHandler")]
        private static extern ScDomResult SciterWindowDetachEventHandler(IntPtr IntPtrLayout, /*[MarshalAs(UnmanagedType.FunctionPtr)] ElementEventProc*/ IntPtr pep, IntPtr tag);

        /// <summary>
        /// SendEvent - sends sinking/bubbling event to the child/parent chain of element element.
        /// First event will be send in SINKING mode (with SINKING flag) - from root to element element itself.
        /// Then from element element to its root on parents chain without SINKING flag (bubbling phase).
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutSendEvent")]
        private static extern ScDomResult SciterSendEvent(IntPtr he, int appEventCode, IntPtr heSource, IntPtr reason, out bool handled);

        /// <summary>
        /// PostEvent - post sinking/bubbling event to the child/parent chain of element element.
        /// Function will return immediately posting event into input queue of the application. 
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutPostEvent")]
        private static extern ScDomResult SciterPostEvent(IntPtr he, int appEventCode, IntPtr heSource, IntPtr reason);

        /// <summary>
        /// SciterCallMethod - calls behavior specific method.
        /// </summary>
        /// <remarks>
        /// TODO: METHOD_PARAMS Should be updated
        /// </remarks>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutCallBehaviorMethod")]
        private static extern ScDomResult SciterCallBehaviorMethod(IntPtr he, ref METHOD_PARAMS param);

        /// <summary>
        /// SciterRequestElementData - request data download for the element.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutRequestElementData")]
        private static extern ScDomResult SciterRequestElementData(IntPtr he, [MarshalAs(UnmanagedType.LPWStr)] String url, RESOURCE_TYPE dataType, IntPtr initiator);

        /// <summary>
        /// SciterSendRequest - send GET or POST request for the element
        /// </summary>
        /// <remarks>
        /// TODO: Need to update REQUEST_TYPE
        /// </remarks>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutHttpRequest")]
        private static extern ScDomResult SciterHttpRequest(IntPtr he, [MarshalAs(UnmanagedType.LPWStr)] String url, RESOURCE_TYPE dataType, uint requestType, IntPtr requestParams, uint nParams);

        /// <summary>
        /// SciterGetScrollInfo - get scroll info of element with overflow:scroll or auto.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutGetScrollInfo")]
        private static extern ScDomResult SciterGetScrollInfo(IntPtr he, out Point scrollPos, out Rectangle viewRect, out Size contentSize);

        /// <summary>
        /// SciterSetScrollPos - set scroll position of element with overflow:scroll or auto.
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutSetScrollPos")]
        private static extern ScDomResult SciterSetScrollPos(IntPtr he, Point scrollPos, bool smooth);

        /// <summary>
        /// SciterIsElementVisible - deep visibility, determines if element visible - has no visiblity:hidden and no display:none defined 
        /// for itself or for any its parents.
        /// </summary> 
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutIsElementVisible")]
        private static extern ScDomResult SciterIsElementVisible(IntPtr he, out bool pVisible);

        /// <summary>
        /// SciterIsElementEnabled - deep enable state, determines if element enabled - is not disabled by itself or no one 
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutIsElementEnabled")]
        private static extern ScDomResult SciterIsElementEnabled(IntPtr he, out bool pEnabled);

        /// <summary>
        /// SciterSortElements
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutSortElements")]
        private static extern ScDomResult SciterSortElements(IntPtr he, int firstIndex, int lastIndex, [MarshalAs(UnmanagedType.FunctionPtr)] ElementComparator cmpFunc, IntPtr cmpFuncParam);

        /// <summary>
        /// SciterTraverseUIEvent - traverse (sink-and-bubble) MOUSE or KEY event.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutTraverseUIEvent")]
        private static extern ScDomResult SciterTraverseUIEvent(EVENT_GROUPS evt, IntPtr eventCtlStruct, out bool bOutProcessed);

        /// <summary>
        /// HTMLayoutMoveElement - moves element from its normal place to the position defined by xView, yView.
        /// </summary>
        [DllImport("htmlayout.dll", EntryPoint = "HTMLayoutMoveElement")]
        private static extern ScDomResult SciterMoveElement(IntPtr he, int xView, int yView);
        #endregion

        /// <summary>
        /// Deletes element from the DOM Tree
        /// </summary>        
        public void DeleteElement(Element element)
        {
            CheckResult(SciterDeleteElement(element.Handle));
        }
    }

    #endregion
}
